<resources>
    <string name="app_name">Compteur Salon Lug\'Est</string>
    <string name="app_title">Compteur Salon Lug\'Est</string>

    <string name="label_number_visitor">Visiteur(s) actuellement dans le salon</string>

    <string name="button_activity_in">Gérer les entrées</string>
    <string name="button_activity_out">Gérer les sorties</string>

    <string name="title_activity_in">Gestion des entrées</string>
    <string name="title_activity_out">Gestion des sorties</string>

    <string name="button_in_1">+1</string>
    <string name="button_in_2">+2</string>
    <string name="button_in_3">+3</string>
    <string name="button_in_4">+4</string>
    <string name="button_in_5">+5</string>

    <string name="button_out_1">-1</string>
    <string name="button_out_2">-2</string>
    <string name="button_out_3">-3</string>
    <string name="button_out_4">-4</string>
    <string name="button_out_5">-5</string>


    <string name="settings_label_server_ip">IP du serveur</string>
    <string name="settings_label_server_port">Port</string>
    <string name="settings_label_max_visitor">Nombre de visiteur maximum</string>

    <string name="button_validate">Valider</string>

    <string name="menu_settings">Paramètres</string>

    <string name="connection_connecting">Connection en cours…</string>
    <string name="connection_error">Impossible de joindre le serveur</string>
    <string name="connection_success">Connection au serveur réussie</string>

    <!-- Preference strings -->
    <string name="pref_category_server">Serveur</string>
    <string name="pref_server_ip">Server ip</string>
    <string name="pref_server_port">Server port</string>
    <string name="pref_category_visitor">Visiteur</string>
    <string name="pref_max_visitor">Max visitor</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="powered_by_devloop">Powered by Devloop</string>

    <string name="dialog_button_yes">Ok</string>
    <string name="dialog_button_no">Annuler</string>
    <string name="dialog_error_title">Attention!</string>
    <string name="dialog_err_wifi">Vous devez activer votre Wifi</string>
    <string name="dialog_err_serv_not_found">Le server n\'est pas configuré ou est inaccessible, veuillez vérifier la configuration depuis les paramètres</string>
</resources>
