<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.devloop.compteursalonlego.OutActivity">

    <TextView
        android:id="@+id/activity_out_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp" />

    <include layout="@layout/layout_visitor_number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/button_out_1"
            android:text="@string/button_out_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            />
        <Button
            android:id="@+id/button_out_2"
            android:text="@string/button_out_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_out_1"
            android:padding="24dp"
            />
        <Button
            android:id="@+id/button_out_3"
            android:text="@string/button_out_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_out_2"
            android:padding="24dp"
            />
        <Button
            android:id="@+id/button_out_4"
            android:text="@string/button_out_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_out_3"
            android:padding="24dp"
            />
        <Button
            android:id="@+id/button_out_5"
            android:text="@string/button_out_5"
            android:layout_below="@id/button_out_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            />

    </RelativeLayout>

</LinearLayout>
