<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.devloop.compteursalonlego.InActivity"
    android:background="@color/colorSecondary">


    <include
        android:id="@+id/appbar"
        layout="@layout/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <include
        android:id="@+id/include2"
        layout="@layout/layout_visitor_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <LinearLayout
        android:id="@+id/button_row_in_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <Button
            android:id="@+id/button_in_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/_button_in_normal"
            android:padding="24dp"
            android:text="@string/button_in_1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_in_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/_button_in_reversed"
            android:padding="24dp"
            android:text="@string/button_in_2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_row_in_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/button_row_in_1"
        android:weightSum="2">

        <Button
            android:id="@+id/button_in_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/_button_in_reversed"
            android:padding="32dp"
            android:text="@string/button_in_3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_in_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/_button_in_normal"
            android:padding="32dp"
            android:text="@string/button_in_4"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_row_in_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/button_row_in_2">
    <Button
        android:id="@+id/button_in_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/_button_in_big"
        android:padding="32dp"
        android:text="@string/button_in_5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_weight="1"/>
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
