<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_connection_connecting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/connection_connecting"
            android:textColor="@color/grayText"
            android:gravity="center|center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_connection_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="32dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/connection_success"
            android:textColor="@color/colorAccent"
            android:gravity="center|center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_connection_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="32dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark">
        </View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/connection_error"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center|center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>


</LinearLayout>